--- a/client/src/css/components/_mobileBars.scss
+++ b/client/src/css/components/_mobileBars.scss
@@ -4,10 +4,16 @@
     border:0;
 }
 .mobileBar{
-    width: 100%;
+    // width: 100%;
+    // height: 50px;
     height: 50px;
+    width: 50px;
     border: 2px solid;
     display: flex;
+    overflow: hidden;
+    position: absolute;
+    z-index: 9;
+    background-color: white;
 }
 .menu-button{
     display: flex;
