--- a/client/src/css/frontEndMain.scss
+++ b/client/src/css/frontEndMain.scss
@@ -514,18 +514,18 @@ font-family: 'Times New Roman', Times, serif;
     position: relative;
     border-top: 1px solid black;
 }
-.previewBubble-container{
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-    position: absolute;
-    z-index: 9999;
-    background-color: white;
-    width: 100%;
-    height: 100%;
-    border-left: 0;
-    border-bottom: 0;
-}
+// .previewBubble-container{
+//     display: flex;
+//     justify-content: flex-end;
+//     align-items: center;
+//     position: absolute;
+//     z-index: 9999;
+//     background-color: white;
+//     width: 100%;
+//     height: 100%;
+//     border-left: 0;
+//     border-bottom: 0;
+// }
 .previewBubble-wrapper{
     padding: 0 5px 0 0;
     display: flex;
@@ -562,8 +562,10 @@ font-family: 'Times New Roman', Times, serif;
 .ArtworkInfo-wrapper{
     width: 100%;
     max-width: 600px;
-    padding: 10px 0px 20px 20px;
+    // padding: 10px 0px 20px 20px;
+    // padding-left: 60px;
     height: 100%;
+    padding-top: 10px;
 }
 .ArtworkInfo-preview-container{
     height: 75px;
@@ -946,6 +948,7 @@ font-family: 'Times New Roman', Times, serif;
         height: 100%;
         width: 100%;
         border-top: 1px solid black;
+        position: relative;
     }
     #foreground{
         mix-blend-mode: unset;
@@ -990,7 +993,8 @@ font-family: 'Times New Roman', Times, serif;
         height: 100%;
     }
     .controls-button{
-        height: 100%;
+        // height: 100%;
+        height: 50px;
         width: 50px;
         background-color: white;
         cursor: pointer;
@@ -1000,11 +1004,9 @@ font-family: 'Times New Roman', Times, serif;
     }
     .previewBubble-container{
         position: relative;
-        flex: 1;
         height: 100%;
         border: none;
-        flex: 1;
-        max-width: calc(100% - 50px);
+        // max-width: calc(100% - 50px);
     }
     .previewBubble-wrapper{
         position: initial;
@@ -1273,10 +1275,15 @@ font-family: 'Times New Roman', Times, serif;
   }
   .previewCounter{
       justify-content: start;
-      padding-left: 20px;
+      padding: 8px;
+      width: 50px;
       span{
-          font-size: 18px;
+          font-size: 12px;
       }
+  }
+  .ArtworkInfo-Title{
+      display: flex;
+      justify-content: space-between;
   }
 
   @import './components/enlarge'
