--- a/client/src/css/frontEndMain.css
+++ b/client/src/css/frontEndMain.css
@@ -6,11 +6,11 @@ ul {
   height: 100%;
   width: 300px;
   overflow: visible;
-  font-family: 'Courier New', Courier, monospace;
   z-index: 99;
   background-color: white;
   border: 1px solid black;
   border-right: 0;
+  border-bottom: 0;
 }
 
 .FilterTree-container_main {
@@ -987,7 +987,7 @@ label {
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  margin: 20px;
+  margin: 20px 0;
   -webkit-box-pack: end;
       -ms-flex-pack: end;
           justify-content: flex-end;
@@ -1056,7 +1056,6 @@ label {
 }
 
 .enlarge-info {
-  height: 50px;
   width: 100%;
   bottom: 0;
   background-color: white;
@@ -1104,15 +1103,16 @@ label {
   background-color: white;
   width: 100% !important;
   max-height: calc(100vh - 59px);
-  overflow-y: auto;
   z-index: 2;
+  padding-bottom: 20px;
+  top: 100%;
 }
 
 .ArtworkInfo-wrapper {
   width: 100%;
   max-width: 600px;
   height: 100%;
-  padding-top: 10px;
+  padding: 0 2vw;
 }
 
 .ArtworkInfo-preview-container {
@@ -1165,7 +1165,6 @@ label {
 }
 
 .ArtworkInfo-container_seealso {
-  padding-right: 20px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1192,13 +1191,15 @@ label {
 }
 
 .ArtworkInfo--descriptions {
-  margin: 1vw 2vw;
+  margin: 1vw 0;
   font-size: 14px;
 }
 
 .ArtworkInfo--descriptions_instance {
   text-indent: 15px;
   margin-top: 10px;
+  padding-left: 32px;
+  font-size: 12px;
 }
 
 .ArtworkInfo_artworkFamily {
@@ -1581,9 +1582,33 @@ label {
           justify-content: flex-end;
 }
 
+.controls-button {
+  height: 35px;
+  width: 35px;
+  background-color: white;
+  cursor: pointer;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin: 0 7px 0 7px;
+}
+
+.controls-button img {
+  height: 100%;
+}
+
 @media only screen and (max-width: 720px) {
   .TagsMenu-category-title:hover * {
     color: black;
+  }
+  .ArtworkInfo--descriptions_instance {
+    padding-left: 0;
   }
   .ArtworkInfo-container {
     -webkit-transition: 0.2s all !important;
@@ -1596,7 +1621,6 @@ label {
     display: flex;
     height: 100%;
     width: 100%;
-    border-top: 1px solid black;
     position: relative;
   }
   #foreground {
@@ -1650,21 +1674,6 @@ label {
     display: -ms-flexbox;
     display: flex;
     height: 100%;
-  }
-  .controls-button {
-    height: 50px;
-    width: 50px;
-    background-color: white;
-    cursor: pointer;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
   }
   .previewBubble-container {
     position: relative;
@@ -1838,10 +1847,6 @@ label {
   .controls-button {
     border: none;
     float: right;
-    padding: 7px;
-  }
-  .controls-button img {
-    height: 100%;
   }
   .info-up {
     display: initial;
@@ -1956,6 +1961,8 @@ label {
   }
   .ArtworkInfo--descriptions {
     font-size: 12px;
+    margin: 4vw 8vw;
+    margin-left: 50px;
   }
   .ArtworkInfo_locationYear {
     font-size: 10px;
@@ -2000,7 +2007,6 @@ label {
   -webkit-box-pack: start;
       -ms-flex-pack: start;
           justify-content: start;
-  padding: 8px;
   width: 50px;
 }
 
@@ -2015,6 +2021,14 @@ label {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  position: absolute;
+  background-color: white;
+  width: 100%;
+  position: absolute;
+  bottom: 100%;
+  left: 0;
+  padding: 20px 0 10px 10px;
+  border-top: 1px solid black;
 }
 
 .enlargeContainer {
@@ -2045,7 +2059,6 @@ label {
 }
 
 .enlarge-bar {
-  height: 50px;
   border-bottom: 1px solid black;
 }
 
@@ -2056,10 +2069,9 @@ label {
 .controls-exitButton {
   position: absolute;
   z-index: 9;
-  height: 50px;
   right: 0;
-  width: 50px;
   background-color: unset;
+  margin-top: 7px;
 }
 
 .controls-slideButton {
@@ -2100,5 +2112,45 @@ label {
 
 .enlarge-opacity {
   opacity: 1;
+}
+
+.legacyStyle-List {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  max-width: 100%;
+  margin: 0;
+  margin: 5px;
+  padding: 0;
+  border-bottom: 1px dotted black;
+}
+
+.FilterTree-container {
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  font-size: 14px;
+  width: 170px;
+}
+
+.legacyStyle-List-listItem {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 0 3px;
+}
+
+.legacyStyle-List-listItem input {
+  margin: 0 4px;
+}
+
+@media only screen and (max-width: 720px) {
+  .FilterTree-container {
+    width: 220px;
+    font-size: 16px;
+  }
 }
 /*# sourceMappingURL=frontEndMain.css.map */
