--- a/client/src/css/frontEndMain.scss
+++ b/client/src/css/frontEndMain.scss
@@ -453,7 +453,7 @@ font-family: 'Times New Roman', Times, serif;
 .Tags-item_wrapper{
     display: flex;
     flex-wrap: wrap;
-    margin: 20px;
+    margin: 20px 0;
     justify-content: flex-end;
     
 }
@@ -506,8 +506,6 @@ font-family: 'Times New Roman', Times, serif;
     min-width: 45px;
 }
 .enlarge-info{
-    // position: absolute;
-    height: 50px;
     width: 100%;
     bottom: 0;
     background-color: white;
@@ -556,16 +554,16 @@ font-family: 'Times New Roman', Times, serif;
     background-color: white;
     width: 100% !important;
     max-height: calc(100vh - 59px);
-    overflow-y: auto;
+    // overflow-y: auto;
     z-index: 2;
+    padding-bottom: 20px;
+    top: 100%;
 }
 .ArtworkInfo-wrapper{
     width: 100%;
     max-width: 600px;
-    // padding: 10px 0px 20px 20px;
-    // padding-left: 60px;
     height: 100%;
-    padding-top: 10px;
+    padding: 0 2vw;
 }
 .ArtworkInfo-preview-container{
     height: 75px;
@@ -601,7 +599,6 @@ font-family: 'Times New Roman', Times, serif;
 }
 
 .ArtworkInfo-container_seealso{
-    padding-right: 20px;
     display: flex;
     justify-content: space-between;
     width: 100%;
@@ -619,12 +616,14 @@ font-family: 'Times New Roman', Times, serif;
     white-space: nowrap;
 }
 .ArtworkInfo--descriptions{
-    margin: 1vw 2vw;
+    margin: 1vw 0;
     font-size: 14px;    
 }
 .ArtworkInfo--descriptions_instance{
     text-indent: 15px;
     margin-top: 10px;
+    padding-left: 32px;
+    font-size: 12px;
 }
 .ArtworkInfo_artworkFamily{
     font-size: 12px;
@@ -933,11 +932,29 @@ font-family: 'Times New Roman', Times, serif;
     justify-content: flex-end;
 }
 
+.controls-button{
+    // height: 100%;
+    height: 35px;
+    width: 35px;
+    background-color: white;
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0 7px 0 7px;
+    img{
+        height: 100%;
+    }
+}
+
 //MEDIA QUERY MOBILE *************************************************************************************************************
 @media only screen and (max-width: 720px) {
     $hovercolor: white !important;
     .TagsMenu-category-title:hover *{
         color: black;
+    }
+    .ArtworkInfo--descriptions_instance{
+        padding-left: 0;
     }
     .ArtworkInfo-container{
         transition: 0.2s all !important;
@@ -947,7 +964,6 @@ font-family: 'Times New Roman', Times, serif;
         display: flex;
         height: 100%;
         width: 100%;
-        border-top: 1px solid black;
         position: relative;
     }
     #foreground{
@@ -992,21 +1008,10 @@ font-family: 'Times New Roman', Times, serif;
         display: flex;
         height: 100%;
     }
-    .controls-button{
-        // height: 100%;
-        height: 50px;
-        width: 50px;
-        background-color: white;
-        cursor: pointer;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
     .previewBubble-container{
         position: relative;
         height: 100%;
         border: none;
-        // max-width: calc(100% - 50px);
     }
     .previewBubble-wrapper{
         position: initial;
@@ -1142,10 +1147,6 @@ font-family: 'Times New Roman', Times, serif;
     .controls-button{
         border: none;
         float: right;
-        padding: 7px;
-        img{
-            height: 100%;
-        }
     }
     .info-up{
         display: initial;
@@ -1237,6 +1238,8 @@ font-family: 'Times New Roman', Times, serif;
     }
     .ArtworkInfo--descriptions{
         font-size: 12px;
+        margin: 4vw 8vw;
+        margin-left: 50px;
     }
     .ArtworkInfo_locationYear{
         font-size: 10px;
@@ -1275,7 +1278,6 @@ font-family: 'Times New Roman', Times, serif;
   }
   .previewCounter{
       justify-content: start;
-      padding: 8px;
       width: 50px;
       span{
           font-size: 12px;
@@ -1284,8 +1286,17 @@ font-family: 'Times New Roman', Times, serif;
   .ArtworkInfo-Title{
       display: flex;
       justify-content: space-between;
+        position: absolute;
+        background-color: white;
+        width: 100%;
+        position: absolute;
+        bottom: 100%;
+        left: 0;
+        padding: 20px 0 10px 10px;
+        border-top: 1px solid black;
   }
 
-  @import './components/enlarge'
+  @import './components/enlarge';
+  @import './components/List';
 
 //   *{transition: 0s all !important;}
