--- a/client/src/css/components/_enlarge.scss
+++ b/client/src/css/components/_enlarge.scss
@@ -4,7 +4,6 @@
     position: absolute;
     max-width: 100%;
     opacity: 1;
-    transition: 0.4s all;
     transform-origin: right;
     transform: translateX(100%);
     right: 0;
@@ -15,6 +14,7 @@
     grid-template-columns: 100%;
     grid-template-rows: 1fr 50px;
     border-left: 1px solid black;
+    overflow: hidden;
 }
 .enlarge-bar{
     // height: 50px;
@@ -42,8 +42,6 @@
     .enlargeContainer{
         background-color: white !important;
         width: 100% !important;
-        opacity: 0;
-        transition: opacity 0.4s;
         max-height: none;
         justify-content: center;
         z-index: 999;
