--- a/client/src/css/components/_List.scss
+++ b/client/src/css/components/_List.scss
@@ -11,6 +11,7 @@
     font-family: Georgia, 'Times New Roman', Times, serif;
     font-size: 14px;
     width: 170px;
+    overflow-x: hidden;
 }
 .legacyStyle-List-listItem{
     display: flex;
