--- a/client/src/css/frontEndMain.css
+++ b/client/src/css/frontEndMain.css
@@ -1078,14 +1078,13 @@ label {
   width: 100% !important;
   max-height: calc(100vh - 59px);
   z-index: 2;
-  padding-bottom: 20px;
   top: 100%;
+  padding: 0 3vw 40px 3vw;
 }
 
 .ArtworkInfo-wrapper {
   width: 100%;
   height: 100%;
-  padding: 0 2vw;
 }
 
 .ArtworkInfo-preview-container {
@@ -1178,6 +1177,10 @@ label {
 
 .ArtworkInfo_artworkTitle {
   font-size: 14px;
+}
+
+.ArtworkInfo_artworkTitle_secondary {
+  color: #ababab;
 }
 
 .ArtworkInfo_locationYear {
@@ -1977,14 +1980,13 @@ label {
   position: absolute;
   bottom: 99%;
   left: 0;
-  padding: 10px 0 20px 15px;
+  padding: 10px 3vw 20px 3vw;
   border-top: 1px solid black;
 }
 
 .enlargeContainer {
   height: 100% !important;
   width: 1px;
-  position: absolute;
   max-width: 100%;
   opacity: 1;
   -webkit-transform-origin: right;
@@ -2077,6 +2079,7 @@ label {
   font-family: Georgia, 'Times New Roman', Times, serif;
   font-size: 14px;
   width: 170px;
+  overflow-x: hidden;
 }
 
 .legacyStyle-List-listItem {
