--- a/client/src/css/frontEndMain.scss
+++ b/client/src/css/frontEndMain.scss
@@ -544,13 +544,12 @@ font-family: 'Times New Roman', Times, serif;
     max-height: calc(100vh - 59px);
     // overflow-y: auto;
     z-index: 2;
-    padding-bottom: 20px;
     top: 100%;
+    padding: 0 3vw 40px 3vw;
 }
 .ArtworkInfo-wrapper{
     width: 100%;
     height: 100%;
-    padding: 0 2vw;
 }
 .ArtworkInfo-preview-container{
     height: 75px;
@@ -616,6 +615,9 @@ font-family: 'Times New Roman', Times, serif;
 }
 .ArtworkInfo_artworkTitle{
     font-size: 14px;
+}
+.ArtworkInfo_artworkTitle_secondary{
+    color: #ababab;
 }
 .ArtworkInfo_locationYear{
     font-size: 12px;
@@ -1267,7 +1269,7 @@ font-family: 'Times New Roman', Times, serif;
         position: absolute;
         bottom: 99%;
         left: 0;
-        padding: 10px 0 20px 15px;
+        padding: 10px 3vw 20px 3vw;
         border-top: 1px solid black;
   }
 
