--- a/client/src/css/components/_FilterTree.scss
+++ b/client/src/css/components/_FilterTree.scss
@@ -11,6 +11,7 @@ ul{
     border: 1px solid black;
     border-right: 0;
     border-bottom: 0;
+    overflow-x: visible;
 }
 .FilterTree-container_main{
     border: 1px solid black;
@@ -228,17 +229,21 @@ ul{
 }
 .FilterTree-container-buttons{
     overflow-y: scroll;
-    overflow-x: hidden;
     height: 100%;
 }
 .hamburger{
     position: absolute;
-    border-right: 1px solid black;
-    border-bottom: 1px solid black;
+    // border-right: 1px solid black;
+    // border-bottom: 1px solid black;
     background-color: white;
     height: 50px;
     width: 51px;
     right: -52px;
+    padding: 5px;
+    img{
+        height: 100%;
+        width: 100%;
+    }
 }
 @media only screen and (max-width: 720px) {
     .FilterTree-wrapper{
