--- a/client/src/css/frontEndMain.scss
+++ b/client/src/css/frontEndMain.scss
@@ -443,7 +443,7 @@ font-family: 'Times New Roman', Times, serif;
 .Tags-item_wrapper{
     display: flex;
     flex-wrap: wrap;
-    margin: 20px 0;
+    margin: 20px 0 0 0;
     justify-content: flex-end;
     
 }
@@ -535,6 +535,7 @@ font-family: 'Times New Roman', Times, serif;
 }
 .ArtworkInfo-container{
     display: flex;
+    flex-direction: column;
     justify-content: flex-end;
     transform: translateY(0);
     position: absolute;
@@ -545,11 +546,14 @@ font-family: 'Times New Roman', Times, serif;
     // overflow-y: auto;
     z-index: 2;
     top: 100%;
-    padding: 0 3vw 40px 3vw;
+    transition: 0.2s all;
+    // padding: 0 3vw 40px 3vw;
 }
 .ArtworkInfo-wrapper{
     width: 100%;
     height: 100%;
+    padding: 0 3vw 15px 3vw;
+    background-color: white;
 }
 .ArtworkInfo-preview-container{
     height: 75px;
@@ -1113,9 +1117,18 @@ font-family: 'Times New Roman', Times, serif;
         flex-direction: column;
         overflow-x: auto;
         border-top: 1px solid;
-        height: 90px;
+        height: 60px;
         overflow-y: hidden;
         border-top: 0;
+        // position: static;
+        top: 0;
+        bottom: unset;
+        // position: unset;
+        transition: 0.2s all;
+        border-top: 1px solid black;
+        img{
+            height: 100%;
+        }
     }
     .enlarge-info{
         display: flex;
@@ -1131,7 +1144,10 @@ font-family: 'Times New Roman', Times, serif;
         display: initial;
         border-left: none;
         border-top: 1px solid;
-        // transform: translateY(-100%);
+        transform: translateY(-100%) !important;
+    }
+    .ArtworkInfo-toggleTags{
+        transform: translateY(-60px);
     }
     .enlarge-scroll-down{
         // transform: translateY(0px);
@@ -1229,9 +1245,9 @@ font-family: 'Times New Roman', Times, serif;
         height: 100% !important;
         min-width: 0 !important;
     }
-    .side-scroll img{
-        height: 90px;
-    }
+    // .side-scroll img{
+    //     height: 90px;
+    // }
     .side-scroll .FilePreview--imageContainer{
         width: initial;
         left: initial;
