pull up and view next on swipe

--- a/client/src/css/frontEndMain.css
+++ b/client/src/css/frontEndMain.css
@@ -300,7 +300,7 @@ ul {
 
 .hamburger {
   position: absolute;
-  background-color: white;
+  background-color: #caffca;
   height: 50px;
   width: 51px;
   right: -52px;
