--- a/client/src/css/components/_FilterTree.scss
+++ b/client/src/css/components/_FilterTree.scss
@@ -235,7 +235,7 @@ ul{
     position: absolute;
     // border-right: 1px solid black;
     // border-bottom: 1px solid black;
-    background-color: white;
+    background-color: rgb(202, 255, 202);
     height: 50px;
     width: 51px;
     right: -52px;
