--- a/client/src/css/components/_FilterTree.scss
+++ b/client/src/css/components/_FilterTree.scss
@@ -233,9 +233,9 @@ ul{
 }
 .hamburger{
     position: absolute;
-    // border-right: 1px solid black;
-    // border-bottom: 1px solid black;
-    background-color: rgb(202, 255, 202);
+    border-right: 1px solid black;
+    border-bottom: 1px solid black;
+    background-color: grey;
     height: 50px;
     width: 51px;
     right: -52px;
@@ -243,6 +243,18 @@ ul{
     img{
         height: 100%;
         width: 100%;
+    }
+}
+.hamburger-open{
+    padding: 8px;
+    background-color: #a0a0a0;
+    img{
+        transform: scale(0.4);
+    }
+}
+.show-menu{
+    .hamburger{
+        right: -51px;
     }
 }
 @media only screen and (max-width: 720px) {
