--- a/client/src/css/frontEndMain.css
+++ b/client/src/css/frontEndMain.css
@@ -300,7 +300,9 @@ ul {
 
 .hamburger {
   position: absolute;
-  background-color: #caffca;
+  border-right: 1px solid black;
+  border-bottom: 1px solid black;
+  background-color: grey;
   height: 50px;
   width: 51px;
   right: -52px;
@@ -310,6 +312,20 @@ ul {
 .hamburger img {
   height: 100%;
   width: 100%;
+}
+
+.hamburger-open {
+  padding: 8px;
+  background-color: #a0a0a0;
+}
+
+.hamburger-open img {
+  -webkit-transform: scale(0.4);
+          transform: scale(0.4);
+}
+
+.show-menu .hamburger {
+  right: -51px;
 }
 
 @media only screen and (max-width: 720px) {
@@ -672,7 +688,7 @@ label {
   -ms-grid-columns: min-content 1fr;
       grid-template-columns: -webkit-min-content 1fr;
       grid-template-columns: min-content 1fr;
-  background-color: white;
+  background-color: grey;
   position: relative;
   border-right: 1px solid black;
   border-bottom: 1px solid black;
@@ -682,7 +698,7 @@ label {
   height: 100%;
   width: 100%;
   overflow-x: hidden;
-  background-color: white;
+  background-color: grey;
   overflow-y: auto;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1087,8 +1103,6 @@ label {
   max-height: calc(100vh - 59px);
   z-index: 2;
   top: 100%;
-  -webkit-transition: 0.2s all;
-  transition: 0.2s all;
 }
 
 .ArtworkInfo-wrapper {
@@ -1777,7 +1791,6 @@ label {
         grid-column-start: 1;
     grid-column-end: 2;
     bottom: 0;
-    background-color: white;
     z-index: 999;
     width: 100% !important;
     border-right: none;
@@ -1802,12 +1815,14 @@ label {
     border-top: 0;
     top: 0;
     bottom: unset;
-    -webkit-transition: 0.2s all;
-    transition: 0.2s all;
     border-top: 1px solid black;
   }
   .side-scroll img {
     height: 100%;
+  }
+  .explorer-view {
+    right: 0;
+    width: calc(100% - 220px) !important;
   }
   .enlarge-info {
     display: -webkit-box;
@@ -2122,5 +2137,134 @@ label {
     width: 220px;
     font-size: 16px;
   }
+}
+
+.button_legacy-style--container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-top: 4px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  height: 40px;
+}
+
+.button_legacy-style {
+  text-transform: uppercase;
+  font-weight: bold;
+  margin: 2px !important;
+  padding: 2px;
+  font-size: 12px;
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.button_legacy-style_disable {
+  border-top: 4px solid #bbbbbb;
+  border-right: 4px solid #494949;
+  border-bottom: 4px solid #494949;
+  border-left: 4px solid #bbbbbb;
+  background-color: #a0a0a0;
+  color: lime;
+}
+
+.button_legacy-style_enable {
+  background-color: gray;
+  color: #494949;
+  border-top: 4px solid #494949;
+  border-right: 4px solid #bbbbbb;
+  border-bottom: 4px solid #bbbbbb;
+  border-left: 4px solid #494949;
+}
+
+.FilterTree-container {
+  background-color: #a0a0a0;
+}
+
+.switch-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  margin: 4px !important;
+}
+
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 80px;
+  height: 26px;
+}
+
+.switch::before {
+  content: "on";
+  position: absolute;
+  top: 20px;
+  font-size: 12px;
+  right: 12px;
+  color: #444444;
+  text-transform: uppercase;
+  font-weight: 600;
+}
+
+.switch::after {
+  content: "off";
+  position: absolute;
+  top: 20px;
+  font-size: 12px;
+  left: 6px;
+  color: #444444;
+  text-transform: uppercase;
+  font-weight: 600;
+}
+
+/* Hide default HTML checkbox */
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+/* The slider */
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 6px;
+  bottom: 6px;
+  background-color: #757575;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 14px;
+  width: 14px;
+  left: 3px;
+  bottom: 3px;
+  background-color: #900b0b;
+  -webkit-transition: .2s;
+  transition: .2s;
+}
+
+input:checked + .slider:before {
+  background-color: lime;
+  -webkit-transform: translateX(54px);
+          transform: translateX(54px);
+}
+
+/* Rounded sliders */
+.slider.round {
+  border-radius: 34px;
+}
+
+.slider.round:before {
+  border-radius: 50%;
 }
 /*# sourceMappingURL=frontEndMain.css.map */
