--- a/client/src/css/main.scss
+++ b/client/src/css/main.scss
@@ -52,9 +52,7 @@ ul{
 }
 .app-container{
     overflow: hidden;
-    // display: flex;
-    // flex-direction: column;
-    border: $border-main;
+    // border: $border-main;
 }
 .admin-container{
     overflow-x: hidden;
