--- a/client/src/css/frontEndMain.scss
+++ b/client/src/css/frontEndMain.scss
@@ -77,7 +77,7 @@ $border-main-color: #bbb;
     width: 100vw;
     display: flex;
     flex-direction: column;
-    border: $border-main;
+    // border: $border-main;
 }
 
 *{
