--- a/client/src/css/components/_viewhide.scss
+++ b/client/src/css/components/_viewhide.scss
@@ -33,6 +33,6 @@ $border-light: 4px solid rgb(187, 187, 187);
     border-bottom: $border-light;
     border-left: $border-dark;
 }
-.FilterTree-container{
-    background-color: rgb(160, 160, 160);
-}
+// .FilterTree-container{
+//     background-color: rgb(160, 160, 160);
+// }
