--- a/client/src/css/components/_FilterTree.scss
+++ b/client/src/css/components/_FilterTree.scss
@@ -5,10 +5,9 @@ ul{
     height: 100%;
     width: 300px;
     overflow: visible;
-    // font-family: 'Courier New', Courier, monospace;
     z-index: 99;
     background-color: white;
-    border: 1px solid black;
+    // border: 1px solid black;
     border-right: 0;
     border-bottom: 0;
     overflow-x: visible;
@@ -235,7 +234,8 @@ ul{
     position: absolute;
     border-right: 1px solid black;
     border-bottom: 1px solid black;
-    background-color: grey;
+    // background-color: grey;
+    background-color: white;
     height: 50px;
     width: 51px;
     right: -52px;
@@ -247,7 +247,7 @@ ul{
 }
 .hamburger-open{
     padding: 8px;
-    background-color: #a0a0a0;
+    // background-color: #a0a0a0;
     img{
         transform: scale(0.4);
     }
@@ -262,14 +262,13 @@ ul{
         margin: 4px !important;
     }
     .FilterTree-container{
-        // height: calc(100% - 90px);
         position: absolute;
         height: 100%;
         width: calc(100% - 50px);
         transform: translateX(-100%);
         transition: transform 0.2s !important;
         border: 0;
-        border-right: 1px solid black;
+        // border-right: 1px solid black;
         grid-row-start: 2;
         grid-row-end: 3;
     }
