--- a/client/src/css/components/_enlarge.scss
+++ b/client/src/css/components/_enlarge.scss
@@ -11,13 +11,12 @@
     position: absolute;
     display: grid;
     grid-template-columns: 100%;
-    grid-template-rows: 1fr 50px;
+    grid-template-rows: 30px 1fr 89px;
     border-left: 1px solid black;
     overflow: hidden;
     z-index: 99;
 }
 .enlarge-bar{
-    // height: 50px;
     border-bottom: 1px solid black;
     .controls-exitButton{
         img{
@@ -25,17 +24,57 @@
         }
     }
 }
+.enlarge-closeButton-container{
+    grid-row-start: 1;
+    height: 30px;
+    width: 100%;
+    border-bottom: 1px solid black;
+}
+.enlarge-closeButton-button{
+    height: 29px;
+    margin-bottom: 10px;
+    position: absolute;
+    right: 10px;
+    text-transform: uppercase;
+    font-weight: bold;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
 .controls-exitButton{
     position: absolute;
     z-index: 9;
-    // height: 50px;
     right: 0;
-    // width: 50px;
     background-color: unset;
     margin-top: 7px;
+    height: 30px;
+    width: 30px;
 }
 .controls-slideButton{
     border-left: 1px solid;
+}
+.viewControls{
+    width: 100%;
+    position: absolute;
+    bottom: 100%;
+    right: 0;
+    border-top: 1px solid black;
+    border-bottom: 1px solid black;
+    background-color: white;
+    height: 30px;
+    div{
+        height: 100%;
+        position: absolute;
+        right: 0;
+        button{
+            height: 100%;
+            border-left: 1px solid black;
+            img{
+                height: 28px;
+                width: 28px;
+            }
+        }
+    }
 }
 
 @media only screen and (max-width: 720px) {
@@ -53,6 +92,10 @@
         display: initial;
         transform: translateX(100%);
         display: grid;
+    }
+    .enlarge-closeButton-button{
+        right: unset;
+        left: 10px;
     }
 }
 .enlarge-scroll-left{
