--- a/client/src/css/frontEndMain.scss
+++ b/client/src/css/frontEndMain.scss
@@ -7,6 +7,9 @@
     white-space: normal;
     // user-select: none;
 }
+button{
+    background-color: white;
+}
 body{
     font-family: Arial, Helvetica, sans-serif;
 }
@@ -60,7 +63,7 @@ label{
 $frame-color: rgb(53, 25, 8);
 $frame-color: white;
 $font-color-main: black;
-$background-color: grey;
+$background-color: white;
 
 //2d
 $border-dark: 1px solid black;
@@ -77,6 +80,7 @@ $border-main-color: #bbb;
     width: 100vw;
     display: flex;
     flex-direction: column;
+    border: 1px solid black;
     // border: $border-main;
 }
 
@@ -239,9 +243,6 @@ font-family: 'Times New Roman', Times, serif;
     grid-template-columns: min-content 1fr;
     background-color: $background-color;
     position: relative;
-    border-right: 1px solid black;
-    border-bottom: 1px solid black;
-
 }
 .imageSelect-container{
     height: 100%;
@@ -1046,9 +1047,6 @@ font-family: 'Times New Roman', Times, serif;
     .frontEndIndex-container{
         grid-template-columns: 100%;
         grid-template-rows: min-content 1fr;
-        // border-left: 1px solid black;
-        border: 1px solid black;
-        // grid-template-rows: 60px 1fr 60px;
     }
     .TagsMenu-container{
         grid-row-start: 1;
