--- a/client/src/css/frontEndMain.css
+++ b/client/src/css/frontEndMain.css
@@ -2120,6 +2120,10 @@ label {
   width: 28px;
 }
 
+.viewControls-button-disabled {
+  opacity: 0.3;
+}
+
 @media only screen and (max-width: 720px) {
   .enlargeContainer {
     background-color: white !important;
@@ -2277,6 +2281,7 @@ label {
   .FilterTree-container {
     width: 220px;
     font-size: 16px;
+    border-right: 1px solid black;
   }
 }
 
