--- a/client/src/css/components/_enlarge.scss
+++ b/client/src/css/components/_enlarge.scss
@@ -62,22 +62,40 @@
     border-bottom: 1px solid black;
     background-color: white;
     height: 30px;
+    display: flex;
+    justify-content: flex-end;
     div{
         height: 100%;
-        position: absolute;
-        right: 0;
-        button{
-            height: 100%;
-            border-left: 1px solid black;
-            img{
-                height: 28px;
-                width: 28px;
-            }
-        }
     }
+}
+.viewControls-button{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
 }
 .viewControls-button-disabled{
     opacity: 0.3;
+}
+.viewControls-viewNext{
+    height: 28px;
+    width: 28px;
+}
+.viewControls-showInfo-infoIcon{
+    height: 20px;
+    width: 20px;
+    margin-right: 7px;
+}
+.viewControls-button-info{
+    margin-right: 10px;
+}
+.viewControls-viewNext-container{
+    display: flex;
+    order: 2;
+}
+.viewControls-info-container{
+    margin-right: 10px;
+    order: 1;
 }
 
 @media only screen and (max-width: 720px) {
@@ -99,6 +117,15 @@
     .enlarge-closeButton-button{
         right: unset;
         left: 10px;
+    }
+    .viewControls{
+        justify-content: space-between;
+    }
+    .viewControls-viewNext-container{
+        order: 1;
+    }
+    .viewControls-info-container{
+        order: 2;
     }
 }
 .enlarge-scroll-left{
