--- a/client/src/css/frontEndMain.css
+++ b/client/src/css/frontEndMain.css
@@ -2102,26 +2102,64 @@ label {
   border-bottom: 1px solid black;
   background-color: white;
   height: 30px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
 }
 
 .viewControls div {
   height: 100%;
-  position: absolute;
-  right: 0;
 }
 
-.viewControls div button {
+.viewControls-button {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   height: 100%;
-  border-left: 1px solid black;
-}
-
-.viewControls div button img {
-  height: 28px;
-  width: 28px;
 }
 
 .viewControls-button-disabled {
   opacity: 0.3;
+}
+
+.viewControls-viewNext {
+  height: 28px;
+  width: 28px;
+}
+
+.viewControls-showInfo-infoIcon {
+  height: 20px;
+  width: 20px;
+  margin-right: 7px;
+}
+
+.viewControls-button-info {
+  margin-right: 10px;
+}
+
+.viewControls-viewNext-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-ordinal-group: 3;
+      -ms-flex-order: 2;
+          order: 2;
+}
+
+.viewControls-info-container {
+  margin-right: 10px;
+  -webkit-box-ordinal-group: 2;
+      -ms-flex-order: 1;
+          order: 1;
 }
 
 @media only screen and (max-width: 720px) {
@@ -2148,6 +2186,21 @@ label {
   .enlarge-closeButton-button {
     right: unset;
     left: 10px;
+  }
+  .viewControls {
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+  .viewControls-viewNext-container {
+    -webkit-box-ordinal-group: 2;
+        -ms-flex-order: 1;
+            order: 1;
+  }
+  .viewControls-info-container {
+    -webkit-box-ordinal-group: 3;
+        -ms-flex-order: 2;
+            order: 2;
   }
 }
 
