--- a/client/src/css/components/_enlarge.scss
+++ b/client/src/css/components/_enlarge.scss
@@ -66,6 +66,9 @@
     justify-content: flex-end;
     div{
         height: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
     }
 }
 .viewControls-button{
